<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">BloodSouls</string>
  <string name="default_web_client_id_fallback">883714064797-bloodsouls.apps.googleusercontent.com</string>
  <string name="game_title">BLOOD SOULS</string>
  <string name="user_status_not_logged_in">ACCOUNT: NOT LOGGED IN</string>
  <string name="user_status_logged_in">LOGGED IN AS: %1$s</string>
  <string name="menu_new_game">NEW GAME</string>
  <string name="menu_continue">CONTINUE</string>
  <string name="menu_options">OPTIONS</string>
  <string name="menu_account">LOGIN / REGISTER</string>
  <string name="menu_logout">LOGOUT (%1$s)</string>
  <string name="menu_about">ABOUT</string>
  <string name="menu_exit">EXIT</string>
  <string name="select_difficulty">SELECT DIFFICULTY</string>
  <string name="difficulty_penitent">PENITENT</string>
  <string name="difficulty_cursed">CURSED</string>
  <string name="difficulty_damned">DAMNED</string>
  <string name="begin_journey">BEGIN JOURNEY</string>
  <string name="choose_save_slot">CHOOSE SAVE SLOT</string>
  <string name="slot_1">SLOT I - SEWER DEPTHS</string>
  <string name="slot_2">SLOT II - EMPTY</string>
  <string name="gore_intensity">GORE / BLOOD INTENSITY</string>
  <string name="intensity_low">LOW</string>
  <string name="intensity_med">MED</string>
  <string name="intensity_high">HIGH</string>
  <string name="language">LANGUAGE</string>
  <string name="about_title">ABOUT BLOOD SOULS</string>
  <string name="about_description">Created by DarkForge Studio.\n\nA dark fantasy action adventure game built with LibGDX and Kotlin.\n\nVersion 1.0.0</string>
  <string name="exit_title">ABANDON THE REALM?</string>
  <string name="exit_description">Are you sure you wish to exit Blood Souls?</string>
  <string name="exit_stay">STAY</string>
  <string name="exit_abandon">ABANDON</string>
  <string name="player_login">PLAYER LOGIN</string>
  <string name="login_subtitle">Enter credentials or use Google SSO</string>
  <string name="hint_email">Email or Username</string>
  <string name="hint_password">Password</string>
  <string name="login_button">LOGIN</string>
  <string name="sign_in_google">G  SIGN IN WITH GOOGLE</string>
  <string name="register">REGISTER</string>
  <string name="play_as_guest">PLAY AS GUEST</string>
  <string name="create_account">CREATE ACCOUNT</string>
  <string name="register_subtitle">Passwords are encrypted using SHA-256 before storing</string>
  <string name="hint_confirm_password">Confirm Password</string>
  <string name="register_button">REGISTER ACCOUNT</string>
  <string name="back_to_login">[ BACK TO LOGIN ]</string>
  <string name="back">[ BACK ]</string>
</resources>
